# BASE-STATIONS

./: LICENSE
BASE_STATION/: BrainPrint.py  DecompilerExporter.java  README.MD  SORT.py  bb_api.h
BASE_STATION/SOFTWARE/AGI_STK_Link/: Beam_wADAR1000.wsv  STK_Radar_Rep.rst  TrackRep.rst  beam_dat_SV2STK_Rx.txt  beam_dat_SV2STK_Tx.txt
BASE_STATION/SOFTWARE/Adaptive Equalization Library/: BlindEqLms.wsv  EqualiserCoreRLS.wsv  EqualiserRealRLS.wsv  EqualiserRealRLSCore.wsv  InverseSysIdAPACore.wsv  InverseSysIdRealAPACore.wsv  LMS_DFE.wsv  SysIdAPA.wsv  SysIdLMS.wsv  SysIdLMSCore.wsv  SysIdQR.wsv  SysIdRLS.wsv  SysIdRealAPA.wsv  SysIdRealLMS.wsv  SysIdRealLMSCore.wsv  SysIdRealQR.wsv
BASE_STATION/SOFTWARE/Automotive Radar/: AutomotiveRadar_3DScan.wsv  AutomotiveRadar_MultiTargetsDetection.wsv  AutomotiveRadar_SignalGeneration.wsv  FMCW_VSA.setx
BASE_STATION/SOFTWARE/Baseband Exploration/5G Advanced Modem Eval/source/: CMakeLists.txt
BASE_STATION/SOFTWARE/Baseband Exploration/5G Advanced Modem Eval/source/resources/: 5GAdvancedModem_BEL_Eval.qrc  5GAdvancedModem_BEL_Eval_Symbols.XML
BASE_STATION/SOFTWARE/Baseband Exploration/5G Advanced Modem Eval/source/stars/: DFParams.cpp  DFParams.h  SDF_MIMO_Encoder.cpp  SDF_MIMO_Encoder.h
BASE_STATION/SOFTWARE/Baseband Exploration/5G Advanced Modem Eval/source/stars_vcproj/: BEL.cmake  CMakeLists.txt  GetModelLibraryVersion.cpp  Intel_MKL.cmake  LibraryProperties.cpp
BASE_STATION/SOFTWARE/Beamforming/: BeamPattern.wsv  (+27 more)
BASE_STATION/SOFTWARE/Model Building/C Modeling/Link Third Party Library/source/: CMakeLists.txt
BASE_STATION/SOFTWARE/Model Building/C Modeling/Link Third Party Library/source/SystemVue/: CMakeLists.txt  LibraryProperties.cpp  RemezLPF.cpp  RemezLPF.h
BASE_STATION/SOFTWARE/Model Building/C Modeling/Link Third Party Library/source/remez/include/: remez.h
BASE_STATION/SOFTWARE/Model Building/C Modeling/Link Third Party Library/source/remez/windows/: remez.lib
BASE_STATION/SOFTWARE/Model Building/IBIS-AMI Modeling/AdaptiveCTLE/AdaptiveCTLE_AMI_ref/source/: CMakeLists.txt
BASE_STATION/SOFTWARE/Model Building/IBIS-AMI Modeling/AdaptiveCTLE/AdaptiveCTLE_AMI_ref/source/AMI-RxAdaptiveCTLE/: CMakeLists.txt  RxAdaptiveCTLE.ami  RxAdaptiveCTLE.cpp  RxAdaptiveCTLE.h  RxAdaptiveCTLE_AMI.cpp  RxAdaptiveCTLE_AMI.h
BASE_STATION/SOFTWARE/Tutorials/Simulation_Control_and_Scripting/Scripting/SystemVueEngine/SVEClientExample/: CMakeLists.txt  PassThroughExampleSimulator.cpp  PassThroughExampleSimulator.h  README.txt  SVEClientExample.cpp
BASE_STATION/TARGETS/: AdaptiveBeamforming.wsv  BeamPattern_using_MATLABScript.wsv  Beamforming_NarrowBand_Source.wsv  CustomMapping.wsv  EW_Targets_Frequency_Hopping_M8190.wsv  MIMO_SM_STC_BER.wsv  Moving_Target_Detection.wsv  MultiBeamInterference.wsv  NR_DL_Tx_MultiBeam_VSA_EVM.wsv  RF_Beamforming_AmpPhaseError.wsv
(+1560 files in other folders)
